--- a/template.latex
+++ b/template.latex
@@ -263,7 +263,7 @@ $if(toc)$
 $if(colorlinks)$
 \hypersetup{linkcolor=$if(toccolor)$$toccolor$$else$black$endif$}
 $endif$
-\setcounter{tocdepth}{$toc-depth$}
+\setcounter{tocdepth}{2}
 \tableofcontents
 }
 $endif$
