--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MY451 Introduction to Quantitative Analysis"
 author:
-    - "Jouni Kuha"
+    - "Jouni Kuha III"
     - "Department of Methodology"
     - "London School of Economics and Political Science"
 date: "2016-17"
